@@ -4,6 +4,7 @@
     * Removed the "SDK Version" option into the plugin.
     * Added support for theme picking for SimplyConnect.
     * Replaced safecharge domain into the endpoints with nuvei one, where is possible.
+    * Split the requests response log.
 
 # 1.4.1
     * Changed the value of sourceApplication and webMasterId values.
